# astralix

./: Cargo.toml  build.rs
src/: ai.rs  keyboard.rs  main.rs  renderer.rs
