[package]
name = "astralix"
version = "0.1.0"
edition = "2021"
links = "SDL2_ttf"

[build-dependencies]
pkg-config = "0.3.25"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.34.5"
nalgebra = "0.30.1"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf"]
